Fix spacing

--- a/src/components/landing/styles.scss
+++ b/src/components/landing/styles.scss
@@ -93,7 +93,7 @@ html, body {
         white-space: nowrap;
         overflow: hidden;
         position: absolute;
-        top: 18vw;
+        top: 24vw;
     }
 
     .grid-child-text {
